--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ace-layout",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Ani Amirjanyan <amirjanyanani@gmail.com>",
   "scripts": {
     "build": "webpack",
@@ -12,14 +12,16 @@
     "browser-fs-access": "latest"
   },
   "devDependencies": {
-    "webpack-cli": "^4.10.0",
-    "events": "^3.3.0",
-    "webpack": "latest",
-    "webpack-dev-server": "latest",
     "copy-webpack-plugin": "9.1.0",
+    "events": "^3.3.0",
     "text-loader": "latest",
     "ts-loader": "latest",
-    "typescript": "latest"
+    "typescript": "latest",
+    "webpack": "latest",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "latest"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "main": "built/bundle.index.js",
+  "types": "src/index.d.ts"
 }
