--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "allowJs": true,
     "target": "es5",
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "include": [
     "./src/**/*"
