--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "typescript": "latest",
     "webpack": "latest",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "latest"
+    "webpack-dev-server": "latest",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1"
   },
   "license": "MIT",
   "main": "built/bundle.index.js",
