--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ace-layout",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "author": "Ani Amirjanyan <amirjanyanani@gmail.com>",
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server"
   },
   "dependencies": {
-    "ace-code": "latest",
+    "ace-code": "^1.17.0",
     "ace-tree": "mkslanc/ace-tree",
     "browser-fs-access": "latest"
   },
