--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ace-layout",
+  "name": "ace-layout-root",
   "version": "1.3.2",
   "author": "Ani Amirjanyan <amirjanyanani@gmail.com>",
   "scripts": {
@@ -13,7 +13,6 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "9.1.0",
-    "events": "^3.3.0",
     "text-loader": "latest",
     "ts-loader": "latest",
     "typescript": "latest",
@@ -24,6 +23,7 @@
     "style-loader": "^3.3.1"
   },
   "license": "MIT",
-  "main": "built/bundle.index.js",
-  "types": "src/index.d.ts"
+  "workspaces": [
+    "./packages/*"
+  ]
 }
