--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "devDependencies": {
     "copy-webpack-plugin": "9.1.0",
     "text-loader": "latest",
-    "ts-loader": "latest",
     "typescript": "latest",
-    "webpack": "latest",
+    "webpack": "^5.79.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "latest",
     "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "esbuild-loader": "^3.0.1"
   },
   "license": "MIT",
   "workspaces": [
