--- a/packages/ace-layout/package.json
+++ b/packages/ace-layout/package.json
@@ -9,9 +9,8 @@
     "ace-code": "^1.17.0",
     "events": "^3.3.0",
     "text-loader": "latest",
-    "ts-loader": "latest",
     "typescript": "latest",
-    "webpack": "latest",
+    "webpack": "^5.79.0",
     "webpack-cli": "^4.10.0",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1"
