--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "copy-webpack-plugin": "9.1.0",
     "text-loader": "latest",
     "typescript": "latest",
-    "webpack": "^5.79.0",
+    "webpack": "5.94.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "latest",
     "css-loader": "^6.7.1",
