react wrapper poc demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strictNullChecks": true,
     "allowJs": true,
     "checkJs": true,
-    "skipLibCheck": true
+    "jsx": "react"
   },
   "include": [
     "./packages/**/*"
