--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   },
   "dependencies": {
     "ace-code": "^1.35.2",
-    "browser-fs-access": "latest"
+    "browser-fs-access": "latest",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "9.1.0",
+    "css-loader": "^6.7.1",
+    "esbuild-loader": "^3.0.1",
+    "style-loader": "^3.3.1",
     "text-loader": "latest",
     "typescript": "latest",
     "webpack": "^5.79.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "latest",
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1",
-    "esbuild-loader": "^3.0.1"
+    "webpack-dev-server": "latest"
   },
   "license": "MIT",
   "workspaces": [
