--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "devDependencies": {
     "copy-webpack-plugin": "9.1.0",
     "text-loader": "latest",
-    "typescript": "latest",
+    "typescript": "^5.7.3",
     "webpack": "5.94.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "latest",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
-    "esbuild-loader": "^3.0.1"
+    "esbuild-loader": "^3.0.1",
+    "@types/node": "^22.12.0"
   },
   "license": "MIT",
   "workspaces": [
