--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "copy-webpack-plugin": "9.1.0",
     "text-loader": "latest",
     "typescript": "^5.7.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "latest",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
     "esbuild-loader": "^3.0.1",
