--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ace-layout-root",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "author": "Ani Amirjanyan <amirjanyanani@gmail.com>",
   "scripts": {
-    "build": "webpack",
+    "build:parts": "npm run build -ws",
+    "build": "npm run build:parts && webpack",
     "start": "webpack-dev-server",
     "check": "tsc"
   },
